add pytest example marker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,8 @@ image_cache_dir = "tests/plotting/image_cache"
 log_cli = "True"
 log_cli_level = "INFO"
 markers = [
-    "image: plotter rendering image test",
+    "example: geovista example image tests",
+    "image: plotter rendering image tests",
 ]
 minversion = "6.0"
 required_plugins = "pytest-mock pytest_pyvista"
