add lazy_loader core package dependency

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -13,6 +13,7 @@ dependencies:
   - cartopy >=0.22
   - click
   - click-default-group
+  - lazy_loader
   - numpy >=1.23
   - platformdirs
   - pooch
