--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ prune .tox
 prune docs
 prune requirements
 recursive-include requirements pypi-*.txt
-recursive-include src *.py *.rst *.txt *.md
+recursive-include src *.md *.py *.pyi *.rst *.txt
 prune tests
 
 include .git_archival.txt
