--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ conda_create_args =
     --override-channels
 conda_deps =
     conda-lock
+    jinja2
     mamba
     pip
 description =
@@ -33,7 +34,8 @@ commands =
     python -c 'from sys import version_info as v; open("{env:WORK}", "a").write(f"\n  - python =\{v.major\}.\{v.minor\}\n{env:VTK_BUILD:}")'
     # resolve the dependencies
     conda-lock --mamba --channel conda-forge --kind explicit --file {env:WORK} --platform linux-64 --filename-template "{envname}-\{platform\}.txt"
-
+    # convert lock to explicit yaml
+    python lock2yaml.py {envname}
 
 [testenv:py{310,311,312}-env]
 conda_spec =
