--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -88,7 +88,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3
       with:
-        name: lock-${{ github.job }}-${{ strategy.job-index }}
+        name: lock-artifacts-${{ github.job }}-${{ strategy.job-index }}
         path: ${{ github.workspace }}/requirements/locks/${{ matrix.version }}*.txt
 
 
@@ -103,7 +103,7 @@ jobs:
 
     - uses: actions/download-artifact@v3
       with:
-        name: lock-${{ github.job }}-${{ strategy.job-index }}
+        name: lock-artifacts-${{ github.job }}-${{ strategy.job-index }}
         path: ${{ github.workspace }}/requirements/locks
 
     - name: "generate token"
