--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -84,7 +84,7 @@ jobs:
 
     - uses: actions/download-artifact@v3
       with:
-        name: pypi-artifacts-build-artifacts-${{ strategy.job-index }}
+        name: pypi-artifacts-build-artifacts-0
         path: ${{ github.workspace }}/dist
 
     - name: "environment configure"
@@ -145,7 +145,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v3
       with:
-        name: pypi-artifacts-build-artifacts-${{ strategy.job-index }}
+        name: pypi-artifacts-build-artifacts-0
         path: ${{ github.workspace }}/dist
 
     - shell: bash
@@ -162,7 +162,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v3
       with:
-        name: pypi-artifacts-build-artifacts-${{ strategy.job-index }}
+        name: pypi-artifacts-build-artifacts-0
         path: ${{ github.workspace }}/dist
 
     - uses: pypa/gh-action-pypi-publish@release/v1
@@ -183,7 +183,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v3
       with:
-        name: pypi-artifacts-build-artifacts-${{ strategy.job-index }}
+        name: pypi-artifacts-build-artifacts-0
         path: ${{ github.workspace }}/dist
 
     - uses: pypa/gh-action-pypi-publish@release/v1
