--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -103,7 +103,7 @@ jobs:
 
     - uses: actions/download-artifact@v3
       with:
-        name: lock-artifacts-build-locks-${{ strategy.job-index }}
+        name: lock-artifacts-build-locks-0
         path: ${{ github.workspace }}/requirements/locks
 
     - name: "generate token"
