--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,7 +15,7 @@ build:
       - geovista download --all --decompress
 
 conda:
-  environment: requirements/geovista.yml
+  environment: requirements/locks/rtd.yml
 
 sphinx:
   configuration: docs/src/conf.py
