update welcome bot first pull-request message

--- a/.github/config.yml
+++ b/.github/config.yml
@@ -21,4 +21,4 @@ newPRWelcomeComment: >
 #
 # Comment to be posted on pull requests merged by a first time user
 firstPRMergeComment: >
-  🤟 Congrats on merging your first pull request! Let the good times roll! 🤟
+  🤟 Congrats on banking your first `geovista` pull request! Let the good times roll! 🤟
