--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,7 +17,7 @@ BUILDDIR      = _build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help clean Makefile
+.PHONY: help clean serve-html Makefile
 
 clean:
 	-rm -rf $(BUILDDIR)
@@ -25,13 +25,13 @@ clean:
 	-rm -rf $(SOURCEDIR)/reference/generated
 	-rm -f $(SOURCEDIR)/sg_execution_times.rst
 
-# Catch-all target: route all unknown targets to Sphinx using the new
-# "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile
-	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
-
 # Spin up a local http server to view the rendered documentation.
 # This is required for interactive examples to work.
 serve-html:
 	@echo "Serving documentation at http://localhost:11000"
 	@python -m http.server 11000 --directory "$(BUILDDIR)"/html
+
+# Catch-all target: route all unknown targets to Sphinx using the new
+# "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
+%: Makefile
+	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
