docs makefile noplot

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,13 +17,22 @@ BUILDDIR      = _build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help clean serve-html Makefile
+.PHONY: Makefile clean help html-docstring html-gallery html-noplot serve-html
 
 clean:
 	-rm -rf $(BUILDDIR)
 	-rm -rf $(SOURCEDIR)/generated
 	-rm -rf $(SOURCEDIR)/reference/generated
 	-rm -f $(SOURCEDIR)/sg_execution_times.rst
+
+html-docstring:
+	@$(SPHINXBUILD) -D plot_gallery=False -b html $(SPHINXOPTS) "$(SOURCEDIR)" "$(BUILDDIR)/html"
+
+html-gallery:
+	@GEOVISTA_DOCSTRING_NOPLOT=1 $(SPHINXBUILD) -b html $(SPHINXOPTS) "$(SOURCEDIR)" "$(BUILDDIR)/html"
+
+html-noplot:
+	@GEOVISTA_DOCSTRING_NOPLOT=1 $(SPHINXBUILD) -D plot_gallery=False -b html $(SPHINXOPTS) "$(SOURCEDIR)" "$(BUILDDIR)/html"
 
 # Spin up a local http server to view the rendered documentation.
 # This is required for interactive examples to work.
