add sphinx-tags dependency

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -57,6 +57,7 @@ dependencies:
   - sphinx-copybutton
   - sphinx-design
   - sphinx-gallery
+  - sphinx-tags
   - ipywidgets
   - jupyter-server-proxy
   - nest-asyncio
