--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 # See https://pre-commit.ci/#configuration
+# See https://github.com/scientific-python/cookie#sp-repo-review
 
 ci:
   autofix_prs: false
@@ -99,16 +100,7 @@ repos:
     hooks:
       - id: sp-repo-review
         additional_dependencies: ["repo-review[cli]"]
-        args: ["--ignore=MY100,PC140,PC180", "--show=errskip"]
-        # MyPy (MY)
-        # https://learn.scientific-python.org/development/guides/style/#MY100
-        # - MY100: Uses MyPy (pyproject config).
-        #
-        # Pre-commit (PC)
-        # https://learn.scientific-python.org/development/guides/style/#PC140
-        # - PC140: Uses mypy.
-        # https://learn.scientific-python.org/development/guides/style/#PC180
-        # - PC180: Uses prettier.
+        args: ["--show=errskip"]
 
   - repo: https://github.com/numpy/numpydoc
     rev: v1.6.0
