--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -109,6 +109,7 @@ jobs:
     - name: "${{ matrix.session }} (${{ matrix.version }})"
       env:
         POST_COMMAND: ${{ matrix.post-command }}
+        PY_COLORS: "1"
       run: |
         tox -e ${{ matrix.version }}-${{ matrix.session }} -- ${{ matrix.posargs }} --xvfb-backend xvfb
 
