--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ prune .github
 prune .tox
 prune docs
 prune requirements
-recursive-include requirements *
+recursive-include requirements *.txt
 recursive-include src *.md *.py *.pyi *.rst *.txt
 prune tests
 
