--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -48,15 +48,14 @@ dependencies:
   - rasterio >=1.3
 
 # documentation dependencies (optional)
-  - jupyter_sphinx
   - numpydoc
   - pydata-sphinx-theme
-  - sphinx
+  - sphinx >=7.3
   - sphinx-autoapi
   - sphinx-book-theme
   - sphinx-copybutton
   - sphinx-design
-  - sphinx-gallery
+  - sphinx-gallery >=0.16
   - sphinx-tags
   - ipywidgets
   - jupyter-server-proxy
