--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands =
     # convert lock to explicit yaml
     python lock2yaml.py {envname}
 
+
 [testenv:py{310,311,312}-env]
 conda_spec =
     py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
@@ -73,27 +74,28 @@ commands =
     pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
 
 
-[testenv:py{310,311,312}-doc-{build,linkcheck,tests}]
+[testenv:py{310,311,312}-{linkcheck,doctest}]
+allowlist_externals =
+    Xvfb
+    make
+changedir =
+    {toxinidir}{/}docs
 conda_spec =
     py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
     py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
     py312: {toxinidir}{/}requirements{/}locks{/}py312-lock-linux-64.txt
 description =
     Build, test and link-check the geovista documentation.
-envdir =
-    {toxworkdir}{/}docs
 platform =
     linux
 setenv =
-    doc-build: BUILDER = html
-    doc-linkcheck: BUILDER = linkcheck
-    doc-tests: BUILDER = doctest
-    BUILDDIR = {toxinidir}/docs/_build
-    SRCDIR = {toxinidir}/docs/src
-    PYVISTA_OFF_SCREEN = True
-    GEOVISTA_POOCH_MUTE = True
+    linkcheck: BUILDER = linkcheck
+    doctest: BUILDER = doctest
+    CI = true
+    GEOVISTA_POOCH_MUTE = true
 usedevelop =
     true
 commands =
-    # -W --keep-going
-    sphinx-build -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
+    make clean
+    make html-noplot
+    make {env:BUILDER}
