--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,7 @@ setenv =
 usedevelop =
     true
 commands =
+    pip install pytest-split
     pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
 
 
