--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   tests:
-    name: "${{ matrix.session }} (${{ matrix.version }})"
+    name: "${{ matrix.session }} ${{ matrix.marker }} (${{ matrix.version }})"
 
     runs-on: ${{ matrix.os }}
 
@@ -106,7 +106,7 @@ jobs:
         packages: libgl1-mesa-glx xvfb
         version: 1.0
 
-    - name: "${{ matrix.session }} (${{ matrix.version }}) [${{ matrix.marker }}]"
+    - name: "${{ matrix.session }} ${{ matrix.marker }} (${{ matrix.version }})"
       env:
         PY_COLORS: "1"
       run: |
@@ -119,8 +119,51 @@ jobs:
         name: test-images-${{ github.job }}-${{ strategy.job-index }}
         path: ${{ github.workspace }}/test_images
 
-    - name: "upload coverage report"
+    - name: "prepare coverage"
       if: ${{ matrix.coverage }}
-      uses: codecov/codecov-action@v4
+      run: |
+        mv .coverage .coverage${{ strategy.job-index }}
+
+    - if: ${{ matrix.coverage }}
+      uses: actions/upload-artifact@v4
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        name: coverage-artifacts-${{ github.job }}-${{ strategy.job-index }}
+        path: ${{ github.workspace }}/.coverage*
+
+
+  coverage:
+    name: "upload coverage"
+    needs: tests
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - run: |
+          python -m pip install --upgrade pip
+          pip install coverage
+
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: coverage-artifacts-*
+          merge-multiple: true
+
+      - name: "create coverage report"
+        run: |
+          coverage combine .coverage*
+          coverage xml --omit=*/_version.py
+
+      - name: "upload coverage report"
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
