--- a/tox.ini
+++ b/tox.ini
@@ -65,12 +65,14 @@ platform =
     linux
 passenv =
     CI
+    GEOVISTA_DOWNLOAD
     PY_COLORS
 setenv =
     GEOVISTA_POOCH_MUTE = true
 usedevelop =
     true
 commands =
+    {env:GEOVISTA_DOWNLOAD:}
     pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
 
 
@@ -88,6 +90,8 @@ description =
     Build, test and link-check the geovista documentation.
 platform =
     linux
+passenv =
+    GEOVISTA_DOWNLOAD
 setenv =
     linkcheck: BUILDER = linkcheck
     doctest: BUILDER = doctest
@@ -96,6 +100,7 @@ setenv =
 usedevelop =
     true
 commands =
+    {env:GEOVISTA_DOWNLOAD:}
     make clean
     make html-noplot
     make {env:BUILDER}
