--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -55,6 +55,7 @@ jobs:
       run: |
         echo "CACHE_PERIOD=$(date +%Y).$(expr $(date +%U) / ${CACHE_WEEKS})" >> ${GITHUB_ENV}
         echo "LOCK_FILE=requirements/locks/${{ matrix.version }}-lock-linux-64.txt" >> ${GITHUB_ENV}
+        echo "DATA_VERSION=$(grep '^DATA_VERSION' src/geovista/cache/__init__.py | tr -d ' "' | cut -d'=' -f2)" >> ${GITHUB_ENV}
 
     - name: "conda package cache"
       uses: ./.github/workflows/composite/conda-pkg-cache
@@ -100,6 +101,13 @@ jobs:
       with:
         packages: libgl1-mesa-glx xvfb
         version: 1.0
+
+    - name: "geovista cache"
+      uses: ./.github/workflows/composite/geovista-cache
+      with:
+        cache_period: ${{ env.CACHE_PERIOD }}
+        env_name: ${{ env.ENV_NAME }}
+        data_version: ${{ env.DATA_VERSION }}
 
     - name: "${{ matrix.session }} (${{ matrix.version }})"
       run: |
