--- a/.github/workflows/composite/conda-pkg-cache/action.yml
+++ b/.github/workflows/composite/conda-pkg-cache/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: "conda environment cache timestamp"
     required: true
   env_name:
-    description: "environment name"
+    description: "gha environment name"
     required: true
 
 runs:
