--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -101,6 +101,11 @@ jobs:
         packages: libgl1-mesa-glx xvfb
         version: 1.0
 
+    - name: "geovista cache"
+      uses: ./.github/workflows/composite/geovista-cache
+      with:
+        cache_period: ${{ env.CACHE_PERIOD }}
+
     - name: "${{ matrix.session }} (${{ matrix.version }})"
       run: |
         tox -e ${{ matrix.version }}-${{ matrix.session }}
