pin pydata-sphinx-theme<0.15.3

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -49,7 +49,7 @@ dependencies:
 
 # documentation dependencies (optional)
   - numpydoc
-  - pydata-sphinx-theme
+  - pydata-sphinx-theme <0.15.3
   - sphinx >=7.3
   - sphinx-autoapi
   - sphinx-book-theme
