--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -49,10 +49,10 @@ dependencies:
 
 # documentation dependencies (optional)
   - numpydoc
-  - pydata-sphinx-theme <0.15.3
+  - pydata-sphinx-theme >=0.15.3
   - sphinx >=7.3
   - sphinx-autoapi
-  - sphinx-book-theme
+  - sphinx-book-theme >=1.1.3
   - sphinx-copybutton
   - sphinx-design
   - sphinx-gallery >=0.16
