--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -57,6 +57,7 @@ dependencies:
   - sphinx-design
   - sphinx-gallery >=0.16
   - sphinx-tags
+  - sphinx-togglebutton
   - ipywidgets
   - jupyter-server-proxy
   - nest-asyncio
