--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -14,7 +14,7 @@ dependencies:
   - click
   - click-default-group
   - lazy_loader
-  - numpy >=1.23
+  - numpy >=1.24
   - platformdirs
   - pooch
   - pykdtree
@@ -51,7 +51,7 @@ dependencies:
   - numpydoc
   - pydata-sphinx-theme >=0.15.3
   - sphinx >=7.3
-  - sphinx-autoapi
+  - sphinx-autoapi >=3.1
   - sphinx-book-theme >=1.1.3
   - sphinx-copybutton
   - sphinx-design
