--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -51,7 +51,7 @@ dependencies:
   - numpydoc
   - pydata-sphinx-theme >=0.15.3
   - sphinx >=7.3
-  - sphinx-autoapi >=3.1
+  - sphinx-autoapi
   - sphinx-book-theme >=1.1.3
   - sphinx-copybutton
   - sphinx-design
