--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -48,6 +48,7 @@ dependencies:
   - rasterio >=1.3
 
 # documentation dependencies (optional)
+  - myst-parser
   - numpydoc
   - pydata-sphinx-theme >=0.15.3
   - sphinx >=7.3
