--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -58,6 +58,7 @@ dependencies:
   - sphinx-design
   - sphinx-gallery >=0.16
   - sphinx-tags
+  - sphinx-tippy
   - sphinx-togglebutton
   - ipywidgets
   - jupyter-server-proxy
