--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,7 +4,7 @@
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
-    "docs/src/CONTRIBUTORS.md"
+    "CONTRIBUTORS.md"
   ],
   "imageSize": 100,
   "commit": true,
