--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -7,6 +7,7 @@
   "commitType": "docs",
   "commitConvention": "angular",
   "contributorsPerLine": 7,
+  "contributorsSortAlphabetically": true,
   "contributors": [
     {
       "login": "bjlittle",
