--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5,7 +5,8 @@
     "CONTRIBUTORS.md"
   ],
   "commitType": "docs",
-  "commitConvention": "angular",
+  "commit": true,
+  "commitConvention": "none",
   "contributorsPerLine": 7,
   "contributorsSortAlphabetically": true,
   "contributors": [
