--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -48,6 +48,7 @@ dependencies:
   - rasterio >=1.3
 
 # documentation dependencies (optional)
+  - ipykernel
   - myst-parser
   - nbsphinx
   - numpydoc
