--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -49,8 +49,7 @@ dependencies:
 
 # documentation dependencies (optional)
   - ipykernel
-  - myst-parser
-  - nbsphinx
+  - myst-nb
   - numpydoc
   - pydata-sphinx-theme >=0.15.3
   - sphinx >=7.3
