--- a/.github/workflows/ci-update-pr-branch.yml
+++ b/.github/workflows/ci-update-pr-branch.yml
@@ -1,4 +1,8 @@
-name: PR update
+# Reference:
+#   - https://github.com/tibdex/github-app-token
+#   - https://github.com/adRise/update-pr-branch
+
+name: ci-update
 
 on:
   push:
@@ -14,13 +18,14 @@ jobs:
         with:
           app_id: ${{ secrets.AUTH_APP_ID }}
           private_key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
+
       - name: "automatically update PR"
         uses: adRise/update-pr-branch@v0.7.2
         with:
           token: ${{ steps.generate-token.outputs.token }}
           base: "main"
           required_approval_count: 1
-          require_passed_checks: false
+          require_passed_checks: true
           sort: "created"
           direction: "desc"
           require_auto_merge_enabled: true
